// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavbarLink render default 1`] = `
<div
  className="sc-AxjAm iHbqWH"
>
  <div
    data-mock="NavLink"
  >
    {
  "to": "/test-link",
  "exact": false,
  "className": "sc-AxirZ lokpvZ"
}
  </div>
</div>
`;

exports[`NavbarLink should render button 1`] = `
<div
  className="sc-AxjAm iHbqWH"
>
  <button
    data-mock="TransparentButton"
  >
    {
  "className": "sc-AxiKw foTUbW nav-link"
}
  </button>
</div>
`;

exports[`NavbarLink should render exact 1`] = `
<div
  className="sc-AxjAm iHbqWH"
>
  <div
    data-mock="NavLink"
  >
    {
  "to": "/test-link",
  "exact": true,
  "className": "sc-AxirZ lokpvZ"
}
  </div>
</div>
`;
